--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,10 +1,17 @@
 .navbar {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    width: 10vw;    
+    justify-content: center;
+    width: 15vw;    
     height: 100vh;
     position: fixed;
     z-index: 100;
     background-color: darkslategrey;
+
+    &-item{
+        margin: 2rem;
+        text-decoration: none;
+        color: white;
+        font-size: 2rem;
+    }
 }
