--- a/src/containers/PaletteContainer/paletteContainer.scss
+++ b/src/containers/PaletteContainer/paletteContainer.scss
@@ -34,6 +34,12 @@
     width: 50vw;
 }
 
+.palette-name {
+    width : 30vw;
+    font-size: 1.5rem;
+    height: 3rem;
+}
+
 .generator-buttons {
     display: flex;
     flex-direction: row;
