--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -16,6 +16,24 @@
         border-radius: 20px;
     }
 }
+.button-secondary {
+
+    width: 10rem;
+    height: 5rem;
+    margin: 2rem;
+    opacity: 0;
+    animation: fadein 1s ease forwards;
+    border: none;
+    border-radius: 10px;
+    color: whitesmoke;
+    background-color: black;
+    transition: color 0.6s ease, background-color 0.6s ease, border-radius 0.6s ease;
+    &:hover{
+        color: darkslategrey;
+        background-color: whitesmoke;
+        border-radius: 20px;
+    }
+}
 
 @keyframes fadein {
 
