--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     position: fixed;
     z-index: 100;
-    background-color: darkslategrey;
+    background-color: black;
 
     &-item{
         margin: 2rem;
@@ -15,3 +15,4 @@
         font-size: 2rem;
     }
 }
+
