--- a/src/components/ColourBlock/colourBlock.scss
+++ b/src/components/ColourBlock/colourBlock.scss
@@ -16,9 +16,10 @@
     &-properties{
         opacity: 0;
         transition: opacity 0.5s ease;
-        height: 5rem;
+        height: 2rem;
         align-items: center;
     }
+    
 
     &-container:hover{
         transform: scale(120%);
@@ -26,13 +27,11 @@
          .colour-block-properties {
             opacity: 1;
         }
+        .button-colour-block{
+            opacity:0.7;
+        }
     }
      
-
-    
-
-    
-
     @keyframes blob {
 
         0%{
@@ -49,4 +48,14 @@
         }
         
     }
+}
+
+.button-colour-block{
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    background: grey;
+    width: 3rem;
+    height: 2rem;
+    border: none;
+    margin: 2px;
 }
