--- a/src/containers/PaletteContainer/paletteContainer.scss
+++ b/src/containers/PaletteContainer/paletteContainer.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 50vw;
+    position: relative;
     
     &-generate {
         flex-wrap: wrap;
@@ -43,6 +44,7 @@
 .generator-buttons {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 @keyframes sway_1 {
