--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -3,6 +3,7 @@
     width: 10rem;
     height: 5rem;
     margin: 2rem;
+    font-size: 1.2rem;
     opacity: 0;
     animation: fadein 1s ease 1s forwards;
     border: none;
